--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "cros": "^1.0.1",
     "multer": "^1.4.5-lts.1",
     "react-stripe-checkout": "^2.6.3",
+    "socket.io": "^4.1.3",
+
     "stripe": "^8.184.0"
   },
   "devDependencies": {
