--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "tone": "^14.7.77",
+    "react-scroll-to-bottom": "^4.1.2",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
